<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_about"
     
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/title_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:singleLine="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        
        android:textSize="17sp" />
    <TextView
        android:id="@+id/title_bar_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people"
        android:singleLine="true"
      
         android:layout_marginTop="20dp"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/title_bar_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system"
        android:layout_marginTop="20dp"
       
        android:singleLine="true"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/title_bar_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mdate"
        android:layout_marginTop="20dp"
       
        android:singleLine="true"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/title_bar_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mstyle"
        android:layout_marginTop="20dp"
       
        android:singleLine="true"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/title_bar_title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        
        android:text="@string/mui"
        android:singleLine="true"
        android:textSize="17sp" />
    
</LinearLayout>
