<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:beyole="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/loginPanel"
        android:layout_width="400dp"
        android:layout_height="380dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
         >

         <com.xpt.util.Roundview.RoundImageView
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:src="@drawable/background_icon_adwalls"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        beyole:borderRadius="50dip"
        beyole:imageType="round" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textColor="#ffffffff"
            android:text="@string/ad" />

         <com.xpt.activity.diyedittext.DIYEditTextAccount
        android:id="@+id/accout"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@null"
        android:drawablePadding="5dp"
        android:hint="@string/hit_account"
        android:padding="10dp" />

    <com.xpt.activity.diyedittext.DIYEditTextPWD
        android:id="@+id/pwd"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawablePadding="5dp"
        android:hint="@string/hit_pwd"
        android:padding="10dp"/>
   <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:onClick="true"
            android:textColor="#ffffffff"
            android:text="@string/repwd" />
   </LinearLayout>
   
   <LinearLayout
        android:id="@+id/loginPanel2"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="425dp"
         >
        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:text="@string/login" 
            android:onClick="onLoginClick"
            android:background="@drawable/button_click_background" />
        
          <Button
            android:id="@+id/register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:text="@string/re" 
            android:onClick="onRegisterClick"
            android:background="@drawable/button_click_background"/>
          
    </LinearLayout>

</RelativeLayout>